backend Routes finished

--- a/src/components/ParksList/ParksList.css
+++ b/src/components/ParksList/ParksList.css
@@ -1,5 +1,7 @@
-.games-container {
+.parks-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  max-width: 1000px;
+  margin: 0 auto;
 }
