--- a/src/components/Park/Park.css
+++ b/src/components/Park/Park.css
@@ -1,4 +1,4 @@
-.game-card {
+.park-card {
   width: 200px;
   height: 250px;
   margin: 20px;
@@ -11,7 +11,7 @@
   align-items: center;
   transition: 0.1s linear;
 }
-.game-card:hover {
+.park-card:hover {
   transform: scale(1.1);
 }
 .image-wrapper {
@@ -21,6 +21,11 @@
   position: absolute;
   z-index: -1;
   overflow: hidden;
+}
+.games-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 img {
   width: 200px;
