--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,4 +1,3 @@
 body {
-  background-image: url(https://lh3.googleusercontent.com/proxy/ELc1Ex1YVdC7Go-96eNVwWf7vJo3FOgqzjCxATFghLM6lUwH-ZyezpqdW36a7baPddI_lHGPyae189tX7ojG8HRp5sDbu5nVYO8MEIovzU_eO3_BkA);
-  background-color: #cccccc;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcTK2qZkPwdMQM0NC11KTFlcjPJJnXd68Qr8fg&usqp=CAU);
 }
